--- a/app/template.html
+++ b/app/template.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>{{title}}</title>
 		<link rel="icon" type="image/png" href="/favicon.png">
+		<link rel="stylesheet" href="/style.css">
 	</head>
 	<body>
 		<div id="root">{{root}}</div>
